# django-collab-profile

./: setup.cfg
collab_profile/: __init__.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
collab_profile/migrations/: 0001_initial.py  0002_auto_20151214_1615.py  0003_auto_20151214_1619.py
collab_profile/static/collab_profile/js/: collab_profile.js
collab_profile/templates/collab_profile/: detail.html  edit.html  edit_password.html  user_confirm_manager.html
collab_profile/templates/collab_profile/includes/: form.html  formfield.html
